--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 ******TESTE*****
 
-linha alteradaAAAA
-vamos.... da conflitoae!!!!
+linha alteradablab lab la
+vamos.... da conflitoae!!!! bla bla bla
+
+outro conflito bla bla bla
+então temos 2! azedo! bla bla bla
+
 
