--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 ******TESTE*****
 
-linha alteradablab lab la
-vamos.... da conflitoae!!!! bla bla bla
+linhablab lab la
+vamositoae!!!! bla bla bla
 
-outro conflito bla bla bla
-então temos 2! azedo! bla bla bla
+outro conla bla
+então temo bla bla
 
 
