--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 ******TESTE*****
 
-linhablab lab la
-vamositoae!!!! bla bla bla
+linhablab la
+vamosit!! bla bla bla
 
-outro conla bla
-então temo bla bla
+outro conbvbv  la bla
+então te bla bla
 
 
